--- a/index.html
+++ b/index.html
@@ -28,6 +28,28 @@
             </div>
         </div>
 
+        <div class="main-content">
+
+            <section class="home section">
+                <div class="container">
+
+                    <div class="intro">
+                        <img src="./Eazy-E32.webp" alt="Yves Emmanuel's photo">
+                        <h1>Yves Emmanuel</h1>
+                        <div class="social-links">
+							<a href="#" target="_blank"><i class="fa fa-linkedin"></i></a>
+                            <a href="https://github.com/yvesemmanuel" target="_blank"><i class="fa fa-github"></i></a>
+							<a href="https://www.instagram.com/yvesemmanuel/" target="_blank"><i class="fa fa-instagram"></i></a>
+						</div>
+                        <p>“Truth can only be found in one place: the code.” ― Robert C. Martin</p>
+                    </div>
+
+                </div>
+            </section>
+
+
+
+        </div>
 
     </div>
     <!--END OF CONTENT CONTAINER-->
