--- a/index.html
+++ b/index.html
@@ -13,24 +13,32 @@
     <!--CONTENT CONTAINER-->
     <div class="main-container">
         
-        <div class="nav-bar">
-            
-            <!--NAV-->
-			<ul class="nav-list">
-				<li><a href="#home"><i class="fa fa-home"></i><b>home</b></a></li>
-				<li><a href="#about"><i class="fa fa-user"></i><b>about me</b></a></li>
-				<li><a href="#projects"><i class="fa fa-list"></i><b>projects</b></a></li>
-			</ul>
+        <div class="aside">
 
-            <!--design reference-->
-            <div class="design-ref">
-                <h2><i class="fab fa-ubuntu"></i>Ubuntu based</h2>
+            <!-- <div class="nav-toggler"></div> -->
+
+            <div class="aside-content">
+                <!--NAV-->
+                <ul class="nav">
+                    <li><a href="#home"><i class="fa fa-home"></i><b>home</b></a></li>
+                    <li><a href="#about"><i class="fa fa-user"></i><b>about me</b></a></li>
+                    <li><a href="#projects"><i class="fa fa-list"></i><b>projects</b></a></li>
+                </ul>
+
+                <!--design reference-->
+                <div class="copyright-text">
+                    <!-- <h2><i class="fab fa-ubuntu"></i>Ubuntu based</h2> -->
+                    <!-- &copy;  -->
+                    <i class="fab fa-ubuntu"></i>Ubuntu based, 2022.
+                </div>
             </div>
+
         </div>
 
         <div class="main-content">
 
-            <section class="home section">
+            <!-- home section -->
+            <section class="home section hidden" id="home">
                 <div class="container">
 
                     <div class="intro">
@@ -39,15 +47,42 @@
                         <div class="social-links">
 							<a href="#" target="_blank"><i class="fa fa-linkedin"></i></a>
                             <a href="https://github.com/yvesemmanuel" target="_blank"><i class="fa fa-github"></i></a>
-							<a href="https://www.instagram.com/yvesemmanuel/" target="_blank"><i class="fa fa-instagram"></i></a>
+							<a href="https://twitter.com/yveseemmanuel" target="_blank"><i class="fa fa-twitter"></i></a>
 						</div>
                         <p>“Truth can only be found in one place: the code.” ― Robert C. Martin</p>
                     </div>
 
                 </div>
             </section>
+            <!-- end of home section -->
+
+            <!-- about section -->
+            <section class="about section" id="about">
+                <div class="container">
+
+                    <div class="row">
+                        <div class="section-title padd-15">
+                            <h2>about me</h2>
+                        </div>
+                    </div>
+
+                    <div class="row">
+                        <div class="about-content">
+
+                            <div class="row">
+                                <div class="about-text padd-15">
+                                    <h3>I'm Yves Emmanuel and <span>Web Developer</span>!</h3>
+                                    <p>Currently, I'm seeking a web developer or IT support position in Recife. Also, I'm interested in data analysis. If you think I'm a good fit, please contact me via the email below.</p>
+                                </div>
+                            </div>
 
 
+                        </div>
+                    </div>
+
+                </div>
+            </section>
+            <!-- end of about section -->
 
         </div>
 
