hard skills and CV file

--- a/index.html
+++ b/index.html
@@ -27,8 +27,6 @@
 
                 <!--design reference-->
                 <div class="copyright-text">
-                    <!-- <h2><i class="fab fa-ubuntu"></i>Ubuntu based</h2> -->
-                    <!-- &copy;  -->
                     <i class="fab fa-ubuntu"></i>Ubuntu based, 2022.
                 </div>
             </div>
@@ -42,7 +40,7 @@
                 <div class="container">
 
                     <div class="intro">
-                        <img src="./Eazy-E32.webp" alt="Yves Emmanuel's photo">
+                        <img src="files/Eazy-E32.webp" alt="Yves Emmanuel's photo">
                         <h1>Yves Emmanuel</h1>
                         <div class="social-links">
 							<a href="#" target="_blank"><i class="fa fa-linkedin"></i></a>
@@ -62,7 +60,9 @@
 
                     <div class="row">
                         <div class="section-title padd-15">
+                            
                             <h2>about me</h2>
+
                         </div>
                     </div>
 
@@ -71,9 +71,72 @@
 
                             <div class="row">
                                 <div class="about-text padd-15">
+
                                     <h3>I'm Yves Emmanuel and <span>Web Developer</span>!</h3>
                                     <p>Currently, I'm seeking a web developer or IT support position in Recife. Also, I'm interested in data analysis. If you think I'm a good fit, please contact me via the email below.</p>
+
                                 </div>
+                            </div>
+
+                            <div class="row">
+
+                                <div class="personal-info padd-15">
+
+									<div class="row">
+										<div class="info-item padd-15">
+											<p>Birth date : <span>May 9, 2001</span></p>
+										</div>
+										<div class="info-item padd-15">
+											<p>Email : <span>yefo@cin.ufpe.br</span></p>
+										</div>
+										<div class="info-item padd-15">
+											<p>City : <span>Recife (PE)</span></p>
+										</div>
+									</div>
+
+                                    <div class="row">
+										<div class="buttons padd-15">
+											<a href="files/CV.pdf" target="_black" class="btn">Download CV</a>
+											<a href="#contact" data-section-index="1" class="btn hire-me">Hire Me</a>
+										</div>
+									</div>
+								</div>
+
+                                <div class="skills">
+                                    <div class="skills-title">
+                                        <h3>Hard Skills</h3>
+                                    </div>
+
+                                    <div class="row">
+                                        
+                                        <div class="skill-item padd-15">
+                                            <p><span class="python">Python: </span>Advanced, OOP, multithreading, sockets, pandas, Seaborn, Matplotlib.</p>
+                                        </div>
+
+                                        <div class="skill-item padd-15">
+                                            <p><span class="cpp">C++: </span>Intermediate, OOP, data structures, algorithms.</p>
+                                        </div>
+
+                                        <div class="skill-item padd-15">
+                                            <p><span class="java">Java: </span>Intermediate, OOP, multithreading.</p>
+                                        </div>
+
+                                        <div class="skill-item padd-15">
+                                            <p><span class="web">HTML: </span>Intermediate.</p>
+                                        </div>
+
+                                        <div class="skill-item padd-15">
+                                            <p><span class="web">CSS: </span>Beginner, Bootstrap.</p>
+                                        </div>
+
+                                        <div class="skill-item padd-15">
+                                            <p><span class="web">JavaScript: </span>Beginner.</p>
+                                        </div>
+
+                                    </div>
+                                </div>
+
+
                             </div>
 
 
