--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <title>Yves Emmanuel</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" type="text/css" href="style.css">
+    <link rel="stylesheet" type="text/css" href="css/style.css">
 </head>
 
 <body>
@@ -55,7 +55,7 @@
             <!-- end of home section -->
 
             <!-- about section -->
-            <section class="about section" id="about">
+            <section class="about section hidden" id="about">
                 <div class="container">
 
                     <div class="row">
@@ -280,6 +280,66 @@
                 </div>
             </section>
             <!-- end of about section -->
+
+
+            <!-- projects section -->
+            <section class="projects section">
+
+                <div class="container">
+                    <div class="row">
+                        <div class="section-title">
+                            <h2>Projects</h2>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="row">
+
+                    <!-- projects item -->
+                    <div class="projects-item padd-15">
+                        <div class="projects-item-inner">
+                            <div class="icon"><i class="fa fa-code"></i></div>
+                            <h4>Web Development</h4>
+                            <p>As a front-end developer, I am qualified to architect and develop websites and applications using web technologies (HTML, CSS, JavaScript). Also, I had some experience with prototype and design working on a UFPE project, so I mixed those skills to build this personal website.</p>
+                        </div>
+                    </div>
+                    <!-- projects item end -->
+
+                    <!-- projects item -->
+                    <div class="projects-item padd-15">
+                        <div class="projects-item-inner">
+                            <div class="icon"><i class="fa fa-chart-bar"></i></div>
+                            <h4>Data Analysis</h4>
+                            <p>Data science has amazed me and I've been practicing data analysis and machine learning algorithms. Using statistics concepts, I analyzed the vaccination data from Recife population with Pandas e Matplotlib (Python3 libraries).</p>
+                        </div>
+                    </div>
+                    <!-- projects item end -->
+
+                    <!-- projects item -->
+                    <div class="projects-item padd-15">
+                        <div class="projects-item-inner">
+                            <div class="icon"><i class="fa fa-play-circle"></i></div>
+                            <h4>Music Player</h4>
+                            <p>In the third semester of college, I had a Software Infraestrutcture discipline and I learned how a computer handles applications with multiple functionalities sharing data (via multithreading). The course project was a music player with all feature implementations based on threads.</p>
+                        </div>
+                    </div>
+                    <!-- projects item end -->
+
+                    <!-- projects item -->
+                    <div class="projects-item padd-15">
+                        <div class="projects-item-inner">
+                            <div class="icon"><i class="fa fa-android"></i></div>
+                            <h4>Machine Learning</h4>
+                            <p>As I got amazed by data science, I had an English discipline focused at Fast.ai’s group course MOOC "Practical Deep Learning for Coders" that introduced me to deep learning practice through machine learning concepts. Then I build a recommendation system content-based to predict a next TV show to watch on Netflix.</p>
+                        </div>
+                    </div>
+                    <!-- projects item end -->
+
+                </div>
+
+                
+            </section>
+            <!-- projects sections end -->
 
         </div>
 
