--- a/index.html
+++ b/index.html
@@ -387,7 +387,7 @@
 
                     <div class="row">
                         <div class="section-title">
-                            <h2>Contact Me</h2>
+                            <h2>Contact</h2>
                         </div>
                     </div>
 
