section title fixed

--- a/index.html
+++ b/index.html
@@ -314,11 +314,10 @@
 
             <!-- project section -->
             <section class="project section" id="projects">
-
                 <div class="container">
                     <div class="row">
                         <div class="section-title padd-15">
-                            <h2>Projects</h2>
+                            <h2>projects</h2>
                         </div>
                     </div>
                 </div>
@@ -386,79 +385,77 @@
                 <div class="container">
 
                     <div class="row">
-                        <div class="section-title">
-                            <h2>Contact</h2>
+                        <div class="section-title padd-15">
+                            <h2>contact</h2>
                         </div>
                     </div>
 
                     <div class="row">
 
-						<!--contact-info item-->
-						<div class="contact-info-item padd-15">
-							<div class="icon"><i class="fa fa-phone"></i></div>
-								<h4>call me on</h4>
-								<p>(81) 98729-8820</p>
-						</div>
-						<!--contact-info item end-->
+                        <!--contact-info item-->
+                        <div class="contact-info-item padd-15">
+                            <div class="icon"><i class="fa fa-phone"></i></div>
+                            <h4>call me on</h4>
+                            <p>(81) 98729-8820</p>
+                        </div>
+                        <!--contact-info item end-->
 
-						<!--contact-info item-->
-						<div class="contact-info-item padd-15">
-							<div class="icon"><i class="fa fa-envelope"></i></div>
-								<h4>email</h4>
-								<p>yefo@cin.ufpe.br</p>
-						</div>
-						<!--contact-info item end-->
+                        <!--contact-info item-->
+                        <div class="contact-info-item padd-15">
+                            <div class="icon"><i class="fa fa-envelope"></i></div>
+                            <h4>email</h4>
+                            <p>yefo@cin.ufpe.br</p>
+                        </div>
+                        <!--contact-info item end-->
 
-					</div>
+                    </div>
 
                     <div class="row">
-						<form class="contact-form padd-15" action="https://api.staticforms.xyz/submit" method="POST">
+                        <form class="contact-form padd-15" action="https://api.staticforms.xyz/submit" method="POST">
 
                             <input type="hidden" name="accessKey" value="a8f78318-25c2-42a4-b4e4-a71e2222c746">
 
-							<div class="row">
-								<div class="form-item half-line padd-15">
-									<div class="form-group">
-										<input type="text" class="form-control" name="name"
-                                        placeholder="Name*">
-									</div>
-								</div>
+                            <div class="row">
+                                <div class="form-item half-line padd-15">
+                                    <div class="form-group">
+                                        <input type="text" class="form-control" name="name" placeholder="Name*">
+                                    </div>
+                                </div>
 
-								<div class="form-item half-line padd-15">
-									<div class="form-group">
-										<input type="email" class="form-control" name="email"
-                                        placeholder="Email*">
-									</div>
-								</div>
-							</div>
+                                <div class="form-item half-line padd-15">
+                                    <div class="form-group">
+                                        <input type="email" class="form-control" name="email" placeholder="Email*">
+                                    </div>
+                                </div>
+                            </div>
 
-							<div class="row">
-								 <div class="form-item full-line padd-15">
-									<div class="form-group">
-										<input type="text" class="form-control" name="subject"
-                                        placeholder="Subject*">
-									</div>
-								</div>
-							</div>
+                            <div class="row">
+                                <div class="form-item full-line padd-15">
+                                    <div class="form-group">
+                                        <input type="text" class="form-control" name="subject" placeholder="Subject*">
+                                    </div>
+                                </div>
+                            </div>
 
-							<div class="row">
-								 <div class="form-item full-line padd-15">
-									<div class="form-group">
-										<textarea class="form-control" name="message" placeholder="Your Message..."></textarea>
-									</div>
-								</div>
-							</div>
+                            <div class="row">
+                                <div class="form-item full-line padd-15">
+                                    <div class="form-group">
+                                        <textarea class="form-control" name="message"
+                                            placeholder="Your Message..."></textarea>
+                                    </div>
+                                </div>
+                            </div>
 
-							<div class="row">
-								 <div class="full-line padd-15">
-									<button type="submit" class="btn" id="sendBtn">Send Message</button>
-								</div>
-							</div>
+                            <div class="row">
+                                <div class="full-line padd-15">
+                                    <button type="submit" class="btn" id="sendBtn">Send Message</button>
+                                </div>
+                            </div>
 
                             <input type="hidden" name="redirectTo" value="https://yvesemmanuel.github.io">
 
-						</form>
-					</div>
+                        </form>
+                    </div>
 
                 </div>
             </section>
