--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 
 <head>
     <title>Yves Emmanuel</title>
@@ -48,9 +48,9 @@
                         <img src="media-fonts/penguin.png" alt="Yves Emmanuel's photo">
                         <h1>Yves Emmanuel</h1>
                         <div class="social-links">
-                            <a href="#" target="_blank"><i class="fa fa-linkedin"></i></a>
-                            <a href="https://github.com/yvesemmanuel" target="_blank"><i class="fa fa-github"></i></a>
-                            <a href="https://twitter.com/yveseemmanuel" target="_blank"><i
+                            <a href="#" target="_blank" aria-label="My LinkedIn account link"><i class="fa fa-linkedin"></i></a>
+                            <a href="https://github.com/yvesemmanuel" target="_blank" aria-label="My GitHub account link"><i class="fa fa-github"></i></a>
+                            <a href="https://twitter.com/yveseemmanuel" target="_blank" aria-label="My Twitter account link"><i
                                     class="fa fa-twitter"></i></a>
                         </div>
                         <p>“Truth can only be found in one place: the code.” ― Robert C. Martin</p>
@@ -313,7 +313,7 @@
 
 
             <!-- project section -->
-            <section class="project section" id="projects">
+            <section class="project section" id="projects" tabindex="0">
                 <div class="container">
                     <div class="row">
                         <div class="section-title padd-15">
