add linkeding reference

--- a/index.html
+++ b/index.html
@@ -48,10 +48,12 @@
                         <img src="media-fonts/penguin.png" alt="Yves Emmanuel's photo">
                         <h1>Yves Emmanuel</h1>
                         <div class="social-links">
-                            <a href="#" target="_blank" aria-label="My LinkedIn account link"><i class="fa fa-linkedin"></i></a>
-                            <a href="https://github.com/yvesemmanuel" target="_blank" aria-label="My GitHub account link"><i class="fa fa-github"></i></a>
-                            <a href="https://twitter.com/yveseemmanuel" target="_blank" aria-label="My Twitter account link"><i
-                                    class="fa fa-twitter"></i></a>
+                            <a href="https://www.linkedin.com/in/yves-emmanuel-850504204/" target="_blank"
+                                aria-label="My LinkedIn account link"><i class="fa fa-linkedin"></i></a>
+                            <a href="https://github.com/yvesemmanuel" target="_blank"
+                                aria-label="My GitHub account link"><i class="fa fa-github"></i></a>
+                            <a href="https://twitter.com/yveseemmanuel" target="_blank"
+                                aria-label="My Twitter account link"><i class="fa fa-twitter"></i></a>
                         </div>
                         <p>“Truth can only be found in one place: the code.” ― Robert C. Martin</p>
                     </div>
