feat: SEO optimization

--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
     <!-- Open Graph meta tags -->
     <meta property="og:title" content="Emmanuel - Engenheiro ML | Serviços de MLOps e IA" />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="https://yvesemmanuel.github.io/og-image.jpg" />
-    <meta property="og:url" content="https://yvesemmanuel.github.io" />
+    <meta property="og:image" content="https://yvesemmanuel.vercel.app/og-image.jpg" />
+    <meta property="og:url" content="https://yvesemmanuel.vercel.app" />
     <meta property="og:description" content="Transforme seus dados em resultados de negócio com soluções especializadas de MLOps, Engenharia de IA e Cloud ML. Consultor com experiência na Globo e Neurotech [B3]." />
     <meta property="og:site_name" content="Emmanuel ML Services" />
     <meta property="og:locale" content="pt_BR" />
@@ -19,9 +19,13 @@
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:title" content="Emmanuel - Engenheiro ML | Serviços de MLOps e IA" />
     <meta name="twitter:description" content="Transforme seus dados em resultados de negócio com soluções especializadas de MLOps, Engenharia de IA e Cloud ML." />
-    <meta name="twitter:image" content="https://yvesemmanuel.github.io/og-image.jpg" />
+    <meta name="twitter:image" content="https://yvesemmanuel.vercel.app/og-image.jpg" />
     
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <!-- Favicon -->
+    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+    <link rel="icon" type="image/x-icon" href="/favicon.ico" />
+    <link rel="apple-touch-icon" href="/favicon.svg" />
+    <link rel="manifest" href="/site.webmanifest" />
     
     <!-- Schema.org structured data -->
     <script type="application/ld+json">
@@ -31,8 +35,8 @@
       "name": "Yves Emmanuel",
       "jobTitle": "Machine Learning Engineer & AI Consultant",
       "description": "Especialista em Machine Learning oferecendo serviços de MLOps, Engenharia de IA e Soluções Cloud. Consultoria focada em transformar dados em resultados de negócio para empresas. Experiência comprovada na Globo e Neurotech [B3] com soluções que impactaram milhões de usuários.",
-      "url": "https://yvesemmanuel.github.io",
-      "image": "https://yvesemmanuel.github.io/og-image.jpg",
+      "url": "https://yvesemmanuel.vercel.app",
+      "image": "https://yvesemmanuel.vercel.app/og-image.jpg",
       "email": "yveemmanuel@gmail.com",
       "telephone": "(81) 987298820",
       "address": {
